# sophisticate-phrase

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.production  GEMINI.md  design-draft.md  docker-compose.yml  package-lock.json  package.json  requirement.md  tailwind.config.js
.sqlx/: query-268bdabc83a40ad80fd0d559d8d7487d192d8a7f8d8ef2eb702966ab5b6f8da6.json  query-5cc14d951139f9cb72c74cf4704e23dada494a2eb65509040a77f1ed57365ce5.json  query-752f9bab369a513d5a67849b7b088f53cf3665c4abd1a8356132ec8efb4d5316.json  query-91cb9d1b1f11deb29c0e10a3e42748830f30682095c714c5d0315a2c424bded2.json  query-b33b334e394693ec2c02cf65ca34145926465468b394e20ecd2543cee9f7b719.json  query-d1a10f48d37998d20cdb4078690bb7f69da269b0fdc60cd40e2b36fb98f06965.json  query-f4246de403d6704d030cba849c5a3333a6eb3adeaf0b704d02b21e7f3a8fae84.json  query-f9526ea00f92fd11b60cb6b2953d2a6d59e4e51fe9e89596ef5b519d43554e36.json
document/: DEVELOPMENT_GUIDE.md  GEMINI_CODE_OF_CONDUCT.md  design-draft.md  functional-design.md  future-considerations.md  non-functional-requirements.md  requirement.md  ui_design_proposal_v0.0.1.md
migrations/: 20250708000000_create_users_table.sql  20250710054633_create_phrase_tables.sql
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs
templates/: base.html  import.html  index.html  list.html  login.html  mypage.html  register.html
