[package]
name = "sophisticate-phrase"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.7.9", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie", "cookie-private", "cookie-signed"] }
csv = "1.3.0"
bcrypt = "0.17.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
uuid = { version = "1.8", features = ["v4", "serde"] }
